solved minor bug (Risolvi button not visible)

--- a/src/app/components/agv-details/agv-details.component.css
+++ b/src/app/components/agv-details/agv-details.component.css
@@ -118,7 +118,8 @@
     justify-items: center;
     text-align: center;
     width: 70vh;
-    height: 45vh;
+    height: auto;
+    margin-bottom: 2vh;
 }
 
 .checkboxList, mat-radio-group
